# fullstack-starter-djvurn

./: .djlintrc  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  DEBUG_DOGMA.md  DEV_WORKFLOW.md  EMAIL_SETUP.md  GREEN_CICD.md  PHASE_4_UI_UX_ENHANCEMENT.md  PROJECT_PLAN.md  README.md  TDD_STATUS.md  TESTING.md  docker-compose.docs.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml
.claude/: PLANNING_GUIDE.md  PLANNING_TOOL_TRANSFORMATION.md  QUICKSTART_AGENT_EXECUTION.md  README.md  SCAFFOLDING_GUIDE.md  SKILL.md
.claude/commands/: execute-session.md  plan-app.md  scaffold-app.md
.claude/templates/blog/: PROJECT_PLAN.md  REQUIREMENTS.md
.devcontainer/: devcontainer.json
.envs/: README.md
.envs/.local.example/: .django  .postgres
.envs/.production.example/: .django  .postgres
.envs/.staging.example/: .django  .postgres
.envs/.testing/: .django  .postgres
.github/workflows/: ci.yml
backend/: manage.py  pyproject.toml  pytest.ini
backend/apps/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
backend/apps/projects/: admin.py  models.py
backend/apps/projects/api/: serializers.py  urls.py  views.py
backend/apps/projects/migrations/: 0001_initial.py
backend/apps/projects/tests/: factories.py  test_models.py  test_serializers.py  test_views.py
backend/apps/shared/: models.py
backend/apps/static/css/: styles.css
backend/apps/templates/: base.html  home.html
backend/apps/templates/email/: .gitkeep  otp_verification.html  otp_verification.txt  password_reset.html  password_reset.txt  password_reset_otp.html  password_reset_otp.txt
backend/apps/users/: admin.py  apps.py  models.py  tasks.py
backend/apps/users/api/: serializers.py  throttles.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_user_is_email_verified_emailverificationotp.py  0003_passwordresettoken.py  0004_user_avatar.py  0005_passwordresetotp.py
backend/apps/users/tests/: factories.py  test_endpoints.py  test_models.py  test_password_reset_endpoints.py  test_password_reset_otp_endpoints.py  test_password_reset_tasks.py  test_resend_otp.py  test_serializers.py  test_tasks.py
backend/config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py  test.py
backend/locale/en_US/LC_MESSAGES/: django.po
backend/locale/fr_FR/LC_MESSAGES/: django.po
backend/locale/pt_BR/LC_MESSAGES/: django.po
compose/local/django/: Dockerfile  start
compose/local/docs/: Dockerfile
compose/local/frontend/: Dockerfile  start
compose/production/django/: entrypoint  start
compose/production/traefik/: traefik.yml
docs/: conf.py  howto.rst  index.rst  make.bat
frontend/: API_CLIENT_USAGE.md  components.json  index.html  openapi-schema.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: sdk.gen.ts  types.gen.ts
frontend/src/components/: CreateProjectForm.vue  PlaceholderCard.vue  ProjectList.vue  ThemeToggle.vue
frontend/src/components/__tests__/: ThemeToggle.test.ts
frontend/src/components/auth/: ForgotPasswordForm.vue  LoginForm.vue  OTPVerificationForm.vue  RegisterForm.vue  ResetPasswordForm.vue
frontend/src/components/projects/: ProjectCard.vue  ProjectFilters.vue  ProjectForm.vue  ProjectList.vue
frontend/src/components/user/: PasswordChangeForm.vue
frontend/src/composables/: useAuth.ts  useProjects.ts  useTheme.ts  useUser.ts
frontend/src/constants/: projects.ts
frontend/src/constants/__tests__/: projects.test.ts
frontend/src/layouts/: AuthLayout.vue  DashboardLayout.vue  MainLayout.vue
frontend/src/lib/: api-client.ts  query-client.ts  token-storage.ts
frontend/src/lib/__tests__/: token-storage.test.ts
frontend/src/router/: index.ts
frontend/src/schemas/: auth.schema.ts  index.ts  password.schema.ts  project.schema.ts  user.schema.ts
frontend/src/schemas/__tests__/: auth.schema.test.ts  password.schema.test.ts  user.schema.test.ts
frontend/src/stores/: auth.store.ts
frontend/src/test/: setup.ts
frontend/src/views/: DashboardView.vue  ForgotPasswordView.vue  LoginView.vue  RegisterView.vue  ResetPasswordView.vue
frontend/src/views/auth/: ForgotPasswordView.vue  LoginView.vue  RegisterView.vue  ResetPasswordView.vue
frontend/src/views/dashboard/: DashboardView.vue
frontend/src/views/main/: HomeView.vue
frontend/src/views/projects/: ProjectDetailView.vue  ProjectListView.vue
frontend/src/views/user/: ProfileView.vue  SettingsView.vue
mobile/: FINAL_10_TESTS_ANALYSIS.md  GETTING_STARTED.md  README.md  SESSION_5_FEATURES.md  SESSION_5_SUMMARY.md  SESSION_8_TDD_PLAN.md  TESTING_ACTION_PLAN.md  TESTING_SKIP_STRATEGY.md  app.json  jest.config.js  openapi-ts.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
mobile/src/: App.tsx
mobile/src/__tests__/: App.test.tsx
mobile/src/api/: sdk.gen.ts  types.gen.ts
mobile/src/components/: OfflineBanner.tsx  index.ts
mobile/src/config/: api.ts
mobile/src/config/__tests__/: api.test.ts
mobile/src/constants/: projects.ts
mobile/src/hooks/: useAppTheme.ts  useNetworkState.ts
mobile/src/navigation/: AuthStack.tsx  MainTab.tsx  ProjectsStack.tsx  RootNavigator.tsx  index.ts  types.ts
mobile/src/providers/: QueryProvider.tsx
mobile/src/schemas/: auth.schema.ts
mobile/src/services/: api-client.ts  auth.service.ts  projects.service.ts  query-client.ts
mobile/src/stores/: authStore.ts  themeStore.ts
mobile/src/test/: mockHelpers.ts  react-native-mock.ts  react-native-testing-mock.ts  setup.ts
mobile/src/theme/: index.ts
mobile/src/types/: react-native-paper.d.ts
project-docs/: API_GENERATION.md  CONTEXT.md
project-docs/archive/: BACKEND_MOVE_ANALYSIS.md  MANAGE_PY_LOCATION_ANALYSIS.md  MIGRATION_COMPLETE.md  TDD_STATUS.md
project-plans/: PROJECT_PLAN.md
project-plans/tasks/: PHASE_4_UI_UX_ENHANCEMENT.md  PHASE_6_EMAIL_INTEGRATION.md  PHASE_8_REACT_NATIVE_SETUP.md  PHASE_9_CAPABILITIES_CATALOG.md  PHASE_9_MICROSERVICES.md  PHASE_9_PACKAGE_STRATEGY.md
(+71 files in other folders)
